[tool.poetry]
name = "xh"
version = "0.1.0"
description = ""
authors = ["crxwns"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = [
    "EM102",
    "EM101",
    "TRY003",
    "FA102",
    "FA100",
    "D",
    "TD003",
    "ANN101",
    "COM812",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xh = "xh.main:main"
